# robotics-classics

./: README.md  main.py  plot_for_cpp.py
cpp/: kf_estimate.csv  main.cpp  particle_filter.cpp  plot_for_cpp.py  plot_particle_filter_output.py  sensor_state.csv  true_state.csv  true_state_pf.csv
cpp/output_particles/: particles_timestep_0.csv  particles_timestep_1.csv  particles_timestep_10.csv  particles_timestep_100.csv  particles_timestep_101.csv  particles_timestep_102.csv  particles_timestep_103.csv  particles_timestep_104.csv  particles_timestep_105.csv  particles_timestep_106.csv  particles_timestep_107.csv  particles_timestep_108.csv  particles_timestep_109.csv  particles_timestep_11.csv  particles_timestep_110.csv  particles_timestep_111.csv  particles_timestep_112.csv  particles_timestep_113.csv  particles_timestep_114.csv  particles_timestep_115.csv  particles_timestep_116.csv  particles_timestep_117.csv  particles_timestep_12.csv  particles_timestep_13.csv  particles_timestep_14.csv  particles_timestep_15.csv  particles_timestep_16.csv  particles_timestep_17.csv  particles_timestep_18.csv  particles_timestep_19.csv  particles_timestep_2.csv  particles_timestep_20.csv  particles_timestep_21.csv  particles_timestep_22.csv  particles_timestep_23.csv  particles_timestep_24.csv  particles_timestep_25.csv  particles_timestep_26.csv  particles_timestep_27.csv  particles_timestep_28.csv  (+78 more)
python/: README.md  main.py
ws/src/control_of_mobile_robot/: CMakeLists.txt  package.xml
ws/src/control_of_mobile_robot/src/: publish_sensor_data.cpp  publisher_member_function.cpp  subscriber_member_function.cpp  trajectory_filtering.cpp
ws/src/robot_interfaces/: CMakeLists.txt  package.xml
ws/src/robot_interfaces/msg/: ControlMsg.msg  SensorMsg.msg
